Wed May 13 06:06:13 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/arch/tcpip/server/TCPIP_CCM_ComponentServer.cpp:
        * cuts/arch/tcpip/server/TCPIP_CCM_Container.h:
        * cuts/arch/tcpip/server/TCPIP_CCM_Container.cpp:

          . Implemented the methods invoked during shutdown.

        * cuts/arch/tcpip/TCPIP_Servant_T.h:
        * cuts/arch/tcpip/ccm/TCPIP_CCM_Servant.h:
        * cuts/arch/tcpip/ccm/TCPIP_CCM_Servant.inl:
        * cuts/arch/tcpip/ccm/TCPIP_CCM_Servant_T.h:
        * cuts/arch/tcpip/ccm/TCPIP_CCM_Servant_T.cpp:
        * cuts/arch/tcpip/ccm/TCPIP_CCM_T.h:
        * cuts/arch/tcpip/ccm/TCPIP_CCM_T.cpp:
        * examples/arch/tcpip/HelloWorld/TCPIP_HelloWorld_svnt.h:
        * examples/arch/tcpip/HelloWorld/TCPIP_HelloWorld_svnt.cpp:

          . The name of the component instance is now stored in
            the servant.

Wed May 13 05:05:08 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/arch/tcpip/TCPIP_Remote_Endpoint.h:
        * cuts/arch/tcpip/TCPIP_Remote_Endpoint.cpp:
        * cuts/arch/tcpip/TCPIP_Remote_Endpoint_T.cpp:
        * cuts/arch/tcpip/ccm/TCPIP_CCM.mpc:
        * cuts/arch/tcpip/ccm/TCPIP_CCM_Cookie.h:
        * cuts/arch/tcpip/ccm/TCPIP_CCM_Cookie.inl:
        * cuts/arch/tcpip/ccm/TCPIP_CCM_Cookie.cpp:
        * cuts/arch/tcpip/ccm/TCPIP_CCM_Servant_T.h:
        * cuts/arch/tcpip/ccm/TCPIP_CCM_Servant_T.inl:
        * cuts/arch/tcpip/ccm/TCPIP_CCM_Servant_T.cpp:
        * cuts/arch/tcpip/ccm/TCPIP_CCM_Subscriber_Table.h:
        * cuts/arch/tcpip/ccm/TCPIP_CCM_Subscriber_Table.inl:
        * cuts/arch/tcpip/ccm/TCPIP_CCM_Subscriber_Table.cpp:
        * cuts/arch/tcpip/ccm/TCPIP_CCM_Subscriber_Table_T.h:
        * cuts/arch/tcpip/ccm/TCPIP_CCM_Subscriber_Table_T.inl:
        * cuts/arch/tcpip/ccm/TCPIP_CCM_Subscriber_Table_T.cpp:
        * examples/arch/tcpip/HelloWorld/HelloWorld.idl:
        * examples/arch/tcpip/HelloWorld/HelloWorld.mpc: